--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,15 @@
-<p>about works!</p>
+<div class="card-container">
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-title>AESChat</mat-card-title>
+            <mat-card-subtitle>About this project</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content class="card-content">
+            <div class="card-content-margin">
+                <span>State: Developing</span><br />
+                <span>Author: WetABQ</span><br />
+                <span>Github Repo: <a href="https://github.com/WetABQ/AESChat">https://github.com/WetABQ/AESChat</a></span><br />
+            </div>
+        </mat-card-content>
+    </mat-card>
+</div>
