--- a/src/app/encryption/encryption.component.html
+++ b/src/app/encryption/encryption.component.html
@@ -6,17 +6,7 @@
     </mat-tab>
     <mat-tab label="Image to Image">
         <div class="tab"> 
-            Test
-        </div>
-    </mat-tab>
-    <mat-tab label="Image to Text">  
-        <div class="tab">
-            Test 
-        </div>
-    </mat-tab>
-    <mat-tab label="Text to Image">  
-        <div class="tab">
-            Test 
+            <app-encryption-image-image class="component"></app-encryption-image-image>
         </div>
     </mat-tab>
 </mat-tab-group>
