--- a/src/app/text-input/text-input.component.html
+++ b/src/app/text-input/text-input.component.html
@@ -5,7 +5,7 @@
       <button *ngIf="bindValue" matSuffix mat-icon-button matTooltip="Clear" aria-label="Clear" (click)="bindValue=''">
         <mat-icon>close</mat-icon>
       </button>
-      <button *ngIf="bindValue" matSuffix mat-icon-button matTooltip="Copy" aria-label="Copy" [cdkCopyToClipboard]="bindValue">
+      <button *ngIf="bindValue" matSuffix mat-icon-button matTooltip="Copy" aria-label="Copy" [cdkCopyToClipboard]="bindValue" (click)="snackbarService.openAlertSnackBar('Copied!')">
         <mat-icon>content_copy</mat-icon>
       </button>
     </div>
