--- a/src/app/encryption-image-image/encryption-image-image.component.html
+++ b/src/app/encryption-image-image/encryption-image-image.component.html
@@ -3,7 +3,7 @@
         <mat-card-title>Image to Image Encryption</mat-card-title>
         <mat-card-subtitle>You could set your personal key on the Configuration page in the left side drawer.<br />This feature is working-in-progress.</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content class="card-content">
+    <mat-card-content>
         <mat-file-upload
             class="card-content-margin"
             labelText="Select an image to upload:"
