--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,11 +4,11 @@
             <mat-card-title>AESChat</mat-card-title>
             <mat-card-subtitle>About this project</mat-card-subtitle>
         </mat-card-header>
-        <mat-card-content class="card-content">
-            <div class="card-content-margin">
-                <span>State: Developing</span><br />
-                <span>Author: WetABQ</span><br />
-                <span>Github Repo: <a href="https://github.com/WetABQ/AESChat">https://github.com/WetABQ/AESChat</a></span><br />
+        <mat-card-content>
+            <div class="card-content-container">
+                <div class="card-content-line"><span>State: </span> <span class="label-orange mat-elevation-z2">Developing</span></div>
+                <div class="card-content-line"><span>Author: </span> <span class="label-indigo mat-elevation-z2"> WetABQ</span></div>
+                <div class="card-content-line"><span>Github Repo: </span> <span><a href="https://github.com/WetABQ/AESChat">https://github.com/WetABQ/AESChat</a></span></div>
             </div>
         </mat-card-content>
     </mat-card>
