--- a/src/app/text-input/text-input.component.html
+++ b/src/app/text-input/text-input.component.html
@@ -1,6 +1,6 @@
 <mat-form-field style="width: 100%;" appearance="fill">
     <mat-label>{{title}}</mat-label>
-    <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="5" type="text" [(ngModel)]="bindValue"></textarea>
+    <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="5" type="text" [(ngModel)]="bindValue" (ngModelChange)="update()"></textarea>
     <div class="right">
       <button *ngIf="bindValue" matSuffix mat-icon-button matTooltip="Clear" aria-label="Clear" (click)="bindValue=''">
         <mat-icon>close</mat-icon>
