--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
       <mat-card class="dashboard-card">
-        <mat-card-header>
+        <!-- <mat-card-header>
           <mat-card-title>
             {{card.title}}
             <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
@@ -14,9 +14,9 @@
               <button mat-menu-item>Remove</button>
             </mat-menu>
           </mat-card-title>
-        </mat-card-header>
+        </mat-card-header> -->
         <mat-card-content class="dashboard-card-content">
-          <div>Card Content Here</div>
+          <div></div>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
