--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
+<script src="js/angular.min.js"></script>
+<script src="js/angular-cookies.js"></script>
 <div class="grid-container">
   <h1 class="mat-h1">Dashboard</h1>
   <mat-grid-list cols="2" rowHeight="350px">
@@ -16,7 +18,8 @@
           </mat-card-title>
         </mat-card-header> -->
         <mat-card-content class="dashboard-card-content">
-          <div></div>
+          <div><setName></setName><br>
+            <setKey></setKey></div>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
