--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,9 +16,10 @@
           </mat-card-title>
         </mat-card-header> -->
         <mat-card-content class="dashboard-card-content">
-          <div><setName></setName><br>
-            <setKey></setKey></div>
-        </mat-card-content>
+          <div><form class="dashboard-name-config"><setName></setName></form><br>
+            <form class="dashboard-key-config"><setKey></setKey></form></div>
+            <cookie></cookie>
+          </mat-card-content>
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
