--- a/src/app/encryption-text-text/encryption-text-text.component.html
+++ b/src/app/encryption-text-text/encryption-text-text.component.html
@@ -2,6 +2,7 @@
   <mat-card-header>
     <mat-card-title>Text to Text Encryption</mat-card-title>
     <mat-card-subtitle>You could set your personal key on the Configuration page in the left side drawer.</mat-card-subtitle>
+    <mat-card-subtitle>Current Key: {{keySetManagerService.getCurrentKeyName()}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <div class="card-content-container">
