--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,13 +11,13 @@
             <button-del-cookie></button-del-cookie>-->
             <mat-form-field appearance="fill">
               <mat-label>Select the Key</mat-label>
-              <mat-select [value]="keySetManagerService.getCurrentKeyName()" (valueChange)="keySetManagerService.selectKey($event)">
+              <mat-select [value]="keySetManagerService.getOptions()" (valueChange)="keySetManagerService.selectKey($event)">
               <mat-option *ngFor="let key of keySetManagerService.getOptions()" [value]="key">
               {{key}}
               </mat-option>
               </mat-select>
             </mat-form-field>
-            <table mat-table [dataSource]="keySetManagerService.getKeySetDataSource()" class="mat-elevation-z2">
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z2">
               <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef> Name </th>
               <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -26,6 +26,17 @@
               <th mat-header-cell *matHeaderCellDef> Key </th>
               <td mat-cell *matCellDef="let element"> {{element.key}} </td>
               </ng-container>
+              <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef> Action </th>
+                <td mat-cell *matCellDef="let element"> 
+                  <button mat-icon-button matTooltip="Edit" aria-label="Edit" (click)="editKey(element.name, element.key)">
+                    <mat-icon>edit</mat-icon>
+                  </button> 
+                  <button mat-icon-button matTooltip="Remove" aria-label="Remove" (click)="delKey(element.name)">
+                    <mat-icon>close</mat-icon>
+                  </button>
+                </td>
+                </ng-container>
               <tr mat-header-row *matHeaderRowDef="displayedCol"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedCol;"></tr>
             </table>
