complete configuration component

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,15 +1,18 @@
 <div class="card-container">
-    <mat-card class="card">
-        <mat-card-header>
-            <mat-card-title>AESChat</mat-card-title>
-            <mat-card-subtitle>About this project</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <div class="card-content-container">
-                <div class="card-content-line"><span>State: </span> <span class="label-orange mat-elevation-z2">Developing</span></div>
-                <div class="card-content-line"><span>Author: </span> <span class="label-indigo mat-elevation-z2"> WetABQ</span></div>
-                <div class="card-content-line"><span>Github Repo: </span> <span><a href="https://github.com/WetABQ/AESChat">https://github.com/WetABQ/AESChat</a></span></div>
-            </div>
-        </mat-card-content>
-    </mat-card>
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title>AESChat</mat-card-title>
+      <mat-card-subtitle>About this project</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="card-content-container">
+        <div class="card-content-line"><span>State: </span> <span
+            class="label-orange mat-elevation-z2">Developing</span></div>
+        <div class="card-content-line"><span>Author: </span> <span class="label-indigo mat-elevation-z2"> WetABQ</span>
+        </div>
+        <div class="card-content-line"><span>Github Repo: </span> <span><a
+              href="https://github.com/WetABQ/AESChat">https://github.com/WetABQ/AESChat</a></span></div>
+      </div>
+    </mat-card-content>
+  </mat-card>
 </div>
