--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,46 +1,55 @@
 <div class="card-container">
   <mat-card class="card">
-      <mat-card-header>
-          <mat-card-title>AESChat</mat-card-title>
-          <mat-card-subtitle>About this project</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-          <div class="card-content-container">
-            <!--<input-name></input-name>
+    <mat-card-header>
+      <mat-card-title>AESChat</mat-card-title>
+      <mat-card-subtitle>About this project</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="card-content-container">
+        <!--<input-name></input-name>
             <input-key></input-key>
             <button-del-cookie></button-del-cookie>-->
-            <mat-form-field appearance="fill">
-              <mat-label>Select the Key</mat-label>
-              <mat-select [value]="keySetManagerService.getOptions()" (valueChange)="keySetManagerService.selectKey($event)">
-              <mat-option *ngFor="let key of keySetManagerService.getOptions()" [value]="key">
+        <mat-form-field appearance="fill">
+          <mat-label>Select the Key</mat-label>
+          <mat-select [value]="keySetManagerService.getCurrentKeyName()"
+            (valueChange)="keySetManagerService.selectKey($event)">
+            <mat-option *ngFor="let key of keySetManagerService.getOptions()" [value]="key">
               {{key}}
-              </mat-option>
-              </mat-select>
-            </mat-form-field>
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z2">
-              <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-              </ng-container>
-              <ng-container matColumnDef="key">
-              <th mat-header-cell *matHeaderCellDef> Key </th>
-              <td mat-cell *matCellDef="let element"> {{element.key}} </td>
-              </ng-container>
-              <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef> Action </th>
-                <td mat-cell *matCellDef="let element"> 
-                  <button mat-icon-button matTooltip="Edit" aria-label="Edit" (click)="editKey(element.name, element.key)">
-                    <mat-icon>edit</mat-icon>
-                  </button> 
-                  <button mat-icon-button matTooltip="Remove" aria-label="Remove" (click)="delKey(element.name)">
-                    <mat-icon>close</mat-icon>
-                  </button>
-                </td>
-                </ng-container>
-              <tr mat-header-row *matHeaderRowDef="displayedCol"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedCol;"></tr>
-            </table>
-          </div>
-      </mat-card-content>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z2">
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+          <ng-container matColumnDef="key">
+            <th mat-header-cell *matHeaderCellDef> Key </th>
+            <td mat-cell *matCellDef="let element"> {{element.key}} </td>
+          </ng-container>
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> Action </th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button matTooltip="Edit" aria-label="Edit" (click)="editKey(element.name, element.key)">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button matTooltip="Remove" aria-label="Remove" (click)="delKey(element.name)">
+                <mat-icon>close</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="creator">
+            <td mat-footer-cell *matFooterCellDef>
+              <button mat-raised-button color="primary" (click)="newKey()">
+                Add a new key
+              </button>
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedCol"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedCol;" class="table-row"></tr>
+          <tr mat-footer-row *matFooterRowDef="['creator']"></tr>
+        </table>
+      </div>
+    </mat-card-content>
   </mat-card>
 </div>
