--- a/src/app/encryption-text-text/encryption-text-text.component.html
+++ b/src/app/encryption-text-text/encryption-text-text.component.html
@@ -1,7 +1,8 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title>Text to Text Encryption</mat-card-title>
-    <mat-card-subtitle>You could set your personal key on the Configuration page in the left side drawer.</mat-card-subtitle>
+    <mat-card-subtitle>You could set your personal key on the Configuration page in the left side drawer.
+    </mat-card-subtitle>
     <mat-card-subtitle>Current Key: {{keySetManagerService.getCurrentKeyName()}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
