--- a/src/app/encryption-text-text/encryption-text-text.component.css
+++ b/src/app/encryption-text-text/encryption-text-text.component.css
@@ -4,3 +4,9 @@
   justify-content: space-around;
   margin: 16px;
 }
+.label-indigo {
+  background-color: rgb(48, 58, 166);
+  color: white;
+  border-radius: 2px;
+  padding: 2px 5px 2px 5px;
+}
