--- a/src/app/dashboard/dialog-edit-key.html
+++ b/src/app/dashboard/dialog-edit-key.html
@@ -8,4 +8,5 @@
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Cancel</button>
     <button mat-button (click)="dialogRef.close(data.key)">Confirm</button>
+    <button mat-button (click)="randomKey()">Generate a random key</button>
 </div>
