--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,37 +15,40 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z2">
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-          </ng-container>
-          <ng-container matColumnDef="key">
-            <th mat-header-cell *matHeaderCellDef> Key </th>
-            <td mat-cell *matCellDef="let element"> {{element.key}} </td>
-          </ng-container>
-          <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef> Action </th>
-            <td mat-cell *matCellDef="let element">
-              <button mat-icon-button matTooltip="Edit" aria-label="Edit" (click)="editKey(element.name, element.key)">
-                <mat-icon>edit</mat-icon>
-              </button>
-              <button mat-icon-button matTooltip="Remove" aria-label="Remove" (click)="delKey(element.name)">
-                <mat-icon>close</mat-icon>
-              </button>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="creator">
-            <td mat-footer-cell *matFooterCellDef>
-              <button mat-raised-button color="primary" (click)="newKey()">
-                Add a new key
-              </button>
-            </td>
-          </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedCol"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedCol;" class="table-row"></tr>
-          <tr mat-footer-row *matFooterRowDef="['creator']"></tr>
-        </table>
+        <div class="table-container">
+          <table mat-table [dataSource]="dataSource" class="mat-elevation-z2">
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+            <ng-container matColumnDef="key">
+              <th mat-header-cell *matHeaderCellDef> Key </th>
+              <td mat-cell *matCellDef="let element"> {{element.key}} </td>
+            </ng-container>
+            <ng-container matColumnDef="action">
+              <th mat-header-cell *matHeaderCellDef> Action </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-icon-button matTooltip="Edit" aria-label="Edit"
+                  (click)="editKey(element.name, element.key)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button matTooltip="Remove" aria-label="Remove" (click)="delKey(element.name)">
+                  <mat-icon>close</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="creator">
+              <td mat-footer-cell *matFooterCellDef>
+                <button mat-raised-button color="primary" (click)="newKey()">
+                  Add a new key
+                </button>
+              </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedCol"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedCol;" class="table-row"></tr>
+            <tr mat-footer-row *matFooterRowDef="['creator']"></tr>
+          </table>
+        </div>
       </div>
     </mat-card-content>
   </mat-card>
