--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
           </ng-container>
           <ng-container matColumnDef="key">
             <th mat-header-cell *matHeaderCellDef> Key </th>
-            <td mat-cell *matCellDef="let element"> {{element.key}} </td>
+            <td mat-cell *matCellDef="let element" class="display-key"> {{element.key}} </td>
           </ng-container>
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef> Action </th>
