--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -7,6 +7,9 @@
     margin-bottom: 16px;
     flex: 0.8;
 }
+.card-title{
+    margin-top: 10px;
+}
 .card-content-container {
     display: flex;
     flex-direction: column;
