--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="card-container">
   <mat-card class="card">
     <mat-card-header>
-      <mat-card-title>AESChat</mat-card-title>
+      <mat-card-title class="card-title">AESChat</mat-card-title>
       <mat-card-subtitle>About this project</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
