--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,7 @@
 <div class="card-container">
   <mat-card class="card">
     <mat-card-header>
-      <mat-card-title>AESChat</mat-card-title>
-      <mat-card-subtitle>About this project</mat-card-subtitle>
+      <mat-card-title>Configuration</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <div class="card-content-container">
