--- a/src/app/dashboard/dialog-edit-key.html
+++ b/src/app/dashboard/dialog-edit-key.html
@@ -1,9 +1,9 @@
 <h1 mat-dialog-title>Set a new key for {{data.name}}</h1>
 <div mat-dialog-content>
-  <mat-form-field style="width: 100%;" [formControl]="editKeyFormControl">
+  <mat-form-field style="width: 100%;">
     <mat-label>Key</mat-label>
-    <input type="text" required matInput [(ngModel)]="data.key">
-    <mat-error *ngIf="editKeyFormControl.hasError('required')">
+    <input required matInput [(ngModel)]="data.key">
+    <mat-error *ngIf="editKeyFormControl.invalid">
       Key is <strong>required</strong>
     </mat-error>
   </mat-form-field>
