--- a/src/app/dashboard/dialog-new-key.html
+++ b/src/app/dashboard/dialog-new-key.html
@@ -1,16 +1,16 @@
 <h1 mat-dialog-title>Add a new key</h1>
 <div mat-dialog-content>
-  <mat-form-field [formControl]="addNewKeyNameFormControl" style="width: 100%;">
+  <mat-form-field style="width: 100%;">
     <mat-label>Name</mat-label>
-    <input matInput [(ngModel)]="name" required>
-    <mat-error *ngIf="addNewKeyNameFormControl.hasError('required')">
+    <input matInput required ngDefaultControl [(ngModel)]="name">
+    <mat-error *ngIf="addNewKeyNameFormControl.invalid">
       Key is <strong>required</strong>
     </mat-error>
   </mat-form-field>
-  <mat-form-field [formControl]="addNewKeyFormControl" style="width: 100%;">
+  <mat-form-field style="width: 100%;">
     <mat-label>Key</mat-label>
-    <input matInput [(ngModel)]="key" required>
-    <mat-error *ngIf="addNewKeyFormControl.hasError('required')">
+    <input matInput required ngDefaultControl [(ngModel)]="key">
+    <mat-error *ngIf="addNewKeyFormControl.invalid">
       Key is <strong>required</strong>
     </mat-error>
   </mat-form-field>
