--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     </mat-card-header>
     <mat-card-content>
       <div class="card-content-container">
-        <mat-form-field appearance="fill">
+        <!--<mat-form-field appearance="fill">
           <mat-label>Select the Key</mat-label>
           <mat-select [value]="keySetManagerService.getCurrentKeyName()"
             (valueChange)="keySetManagerService.selectKey($event)">
@@ -13,25 +13,33 @@
               {{key}}
             </mat-option>
           </mat-select>
-        </mat-form-field>
+        </mat-form-field>-->
         <div class="table-container">
           <table mat-table [dataSource]="dataSource" class="mat-elevation-z2">
+            <ng-container matColumnDef="select">
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td mat-cell *matCellDef="let row">
+                <mat-radio-group [ngModel]="keySetManagerService.getCurrentKeyName()" (ngModelChange)="keySetManagerService.selectKey($event)">
+                  <mat-radio-button [value]="row.name"></mat-radio-button>
+                </mat-radio-group>
+              </td>
+            </ng-container>
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef> Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+              <td mat-cell *matCellDef="let row"> {{row.name}} </td>
             </ng-container>
             <ng-container matColumnDef="key">
               <th mat-header-cell *matHeaderCellDef> Key </th>
-              <td mat-cell *matCellDef="let element"> {{element.key}} </td>
+              <td mat-cell *matCellDef="let row"> {{row.key}} </td>
             </ng-container>
             <ng-container matColumnDef="action">
               <th mat-header-cell *matHeaderCellDef> Action </th>
-              <td mat-cell *matCellDef="let element">
+              <td mat-cell *matCellDef="let row">
                 <button mat-icon-button matTooltip="Edit" aria-label="Edit"
-                  (click)="editKey(element.name, element.key)">
+                  (click)="editKey(row.name, row.key)">
                   <mat-icon>edit</mat-icon>
                 </button>
-                <button mat-icon-button matTooltip="Remove" aria-label="Remove" (click)="delKey(element.name)">
+                <button mat-icon-button matTooltip="Remove" aria-label="Remove" (click)="delKey(row.name)">
                   <mat-icon>close</mat-icon>
                 </button>
               </td>
@@ -43,13 +51,20 @@
                 </button>
               </td>
             </ng-container>
+            <!--<ng-container matColumnDef="generator">
+              <td mat-footer-cell *matFooterCellDef>
+                <button mat-raised-button color="primary" (click)="newRandomKey()">
+                  Generate a random key
+                </button>
+              </td>
+            </ng-container>-->
             <ng-container matColumnDef="blank">
               <td mat-footer-cell *matFooterCellDef>
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedCol"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedCol;" class="table-row"></tr>
-            <tr mat-footer-row *matFooterRowDef="['blank', 'creator', 'blank']"></tr>
+            <tr mat-footer-row *matFooterRowDef="['creator', 'blank', 'blank', 'blank']"></tr>
           </table>
         </div>
       </div>
