--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -63,7 +63,7 @@
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedCol"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedCol;" class="table-row"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedCol;" class="table-row" style="opacity: 0;" [@fadeInOut]="checkAnimationState(row.name)"></tr>
             <tr mat-footer-row *matFooterRowDef="['creator', 'blank', 'blank', 'blank']"></tr>
           </table>
         </div>
