complete image encryption!

--- a/src/app/encryption-text-text/encryption-text-text.component.css
+++ b/src/app/encryption-text-text/encryption-text-text.component.css
@@ -1,6 +1,6 @@
 .card-content-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 16px;
 }
