--- a/src/app/encryption/encryption.component.html
+++ b/src/app/encryption/encryption.component.html
@@ -1,12 +1,12 @@
-<mat-tab-group mat-align-tabs="center" color="primary" backgroundColor="primary">
+<mat-tab-group mat-align-tabs="center" color="primary" backgroundColor="primary" selectedIndex="1">
     <mat-tab label="Text to Text"> 
         <div class="tab">
             <app-encryption-text-text class="component"></app-encryption-text-text>
         </div> 
     </mat-tab>
-    <mat-tab label="Image to Image">
+    <mat-tab label="Image to Text">
         <div class="tab"> 
-            <app-encryption-image-image class="component"></app-encryption-image-image>
+            <app-encryption-image-text class="component"></app-encryption-image-text>
         </div>
     </mat-tab>
 </mat-tab-group>
