--- a/src/app/encryption-text-text/encryption-text-text.component.css
+++ b/src/app/encryption-text-text/encryption-text-text.component.css
@@ -1,3 +1,14 @@
+.card-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.card {
+  margin-top: 16px;
+  margin-bottom: 16px;
+  flex: 0.98;
+}
+
 .card-content-container {
   display: flex;
   flex-direction: column;
