--- a/src/app/encryption-text-text/encryption-text-text.component.html
+++ b/src/app/encryption-text-text/encryption-text-text.component.html
@@ -1,22 +1,23 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Text to Text Encryption</mat-card-title>
-    <mat-card-subtitle>You could set your personal key on the Configuration page in the left side drawer.
-    </mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <div class="card-content-container">
-      <mat-form-field appearance="fill">
-        <mat-label>Select the Key</mat-label>
-        <mat-select [value]="keySetManagerService.getCurrentKeyName()"
-          (valueChange)="selectKey($event)">
-          <mat-option *ngFor="let key of keySetManagerService.getOptions()" [value]="key">
-            {{key}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <text-input title="Plain Text" (bindValueChange)="encrypt($event)" [bindValue]="plainText"></text-input>
-      <text-input title="Encrypted Text" (bindValueChange)="decrypt($event)" [bindValue]="encryptedText"></text-input>
-    </div>
-  </mat-card-content>
-</mat-card>
+<div class="card-container">
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title>Text to Text Encryption</mat-card-title>
+      <mat-card-subtitle>You could set your personal key on the Configuration page in the left side drawer.
+      </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="card-content-container">
+        <mat-form-field appearance="fill">
+          <mat-label>Select the Key</mat-label>
+          <mat-select [value]="keySetManagerService.getCurrentKeyName()" (valueChange)="selectKey($event)">
+            <mat-option *ngFor="let key of keySetManagerService.getOptions()" [value]="key">
+              {{key}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <text-input title="Plain Text" (bindValueChange)="encrypt($event)" [bindValue]="plainText"></text-input>
+        <text-input title="Encrypted Text" (bindValueChange)="decrypt($event)" [bindValue]="encryptedText"></text-input>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
